# butter-cup

./: .gitignore  .pdm-python  .pre-commit-config.yaml  1e8f4e6d-43d5-440e-81f5-e9262ed4819a.jsonld  5e53ec13-7cdb-4e41-95aa-f48b4206ead4.jsonld  README.md  ai_risk_calc.py  ai_risk_calc_vector.py  pyproject.toml  thingy.py
_site/README/: index.html
src/butter_cup/: __init__.py  __main__.py  api.py  cli.py  daffodil.py  daisy.py  flower.py
static/: api  hello.json
tests/: flower_test.py
