[project]
name = "butter-cup"
version = "0.1.0"
description = ""
authors = [
    {name = "pboisver", email = "pboisver@umich.edu"},
]
dependencies = [
    "leftpad>=0.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "ruff>=0.0.278",
    "isort>=5.12.0",
    "pyright>=1.1.317",
    "mypy>=1.4.1",
]

[tools.isort]
profile = "black"
