[tool.poetry]
name = "butter-cup"
version = "0.1.0"
description = ""
authors = ["circleci <kgrid-developers@umich.edu>"]
readme = "README.md"
packages = [{include = "butter_cup", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
leftpad = "^0.1.2"
typer = "^0.15.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
polars = "^1.24.0"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
buttercup = "butter_cup:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "ls"
